v 1.4.7.0.b
Major:
* Allow to burn paragon without breaking Iron Will mode if insane Space Oddity has already been achieved
* Improve kittens' save compression
* Make Hydroponics increase kittens capacity of Terraforming Stations

Minor:
* Add confirmation pop-up for present box unwrapping
* Improve contrast of text in sub-buttons
* Display energy in orange if it will be negative in winter
* Fix kittens per tick rate
* Add special effect on exotic resources and on 777 and 1337
* Fix gflops consumption display
* Always display science tab if you have the calendar or chronophysics sciences
* Use titanium' and blueprints' translated name in trade messages
* Move 'return empty-pawed' below the corresponding 'sent x trades' message and remove its bullet
* Fix Chrono Furnace state when exporting save from web to mobile
* Fix base skill XP not being multiplied by number of ticks in case of offline progression

v 1.4.7.0
Major:
* Fix Biofuel Processing (Data Center <-> Biolab synergy now works regardless of powered state)
* Add Time Boiler, a new building increasing heat capacity of Chrono Furnace
* Allow to get karma or paragon from present box after getting Anachronomancy
* Export save content directly in text file

Minor:
* Fix a lot of typos, texts and translations (especially Russian and Chinese)
* Fix kittens preserved by Cryochambers (sort by rank, not by remaining XP)
* Allow to shatter ×500
* Allow to hold festivals ×100
* Allow to sacrifice/refine 20/50 % of unicorns/alicorns/TCs (similarly to trades)
* Fix Tempus Fugit (make an explicit on/off button like Steamworks, save status of Tempus Fugit for refresh (but not for reset))
* Improve log rendering performance
* Don't save activation state of Chrono Furnace
* Display temporal flux total time and heat dissipation remaining/total time
* Fix workshop automation cap
* Replace “Resets Made” with “Run Number”
* Add links to preview versions
* Highlight ‘+’ link of buildings not fully activated
