@@ -34,8 +34,9 @@
 
 		<link rel="stylesheet" href="res/default.css?v=5" type="text/css">
 		<link rel="stylesheet" href="res/theme_dark.css?v=5" type="text/css">
-        <link rel="stylesheet" href="res/theme_grassy.css?v=5" type="text/css">
+		<link rel="stylesheet" href="res/theme_grassy.css?v=5" type="text/css">
 		<link rel="stylesheet" href="res/theme_sleek.css?v=5" type="text/css">
+		<link rel="stylesheet" href="res/theme_gold.css?v=5" type="text/css">
 
 		<script src="https://www.gstatic.com/firebasejs/3.6.4/firebase.js"></script>
 		<script>
@@ -430,37 +431,28 @@
 			<div id="creditsDiv" style="display: none" class="dialog credits">
 				<a href="#" onclick="$('#creditsDiv').hide();" style="position: absolute; top: 10px; right: 15px;">close</a>
 
-				Sleek CSS theme by Kida, Grassy CSS theme by <a href="http://www.reddit.com/user/shrx" target="_blank">shrx</a> <br />
-
-				<br>
-				Code contribution:
-				<br>
+				CSS themes: Grassy by <a href="http://www.reddit.com/user/shrx" target="_blank">shrx</a>, Sleek by Kida, Gold by Volkeyrn.<br />
+				<br />
+				Code contributions:
 				<ul>
 					<li><a href="http://www.reddit.com/user/Zusias" target="_blank">Zusias</a></li>
 					<li>Duke</li>
 					<li><a href="http://www.reddit.com/user/xranti" target="_blank">xranti</a></li>
-                    <li><a href="http://www.reddit.com/user/klusark" target="_blank">klusark</a></li>
+					<li><a href="http://www.reddit.com/user/klusark" target="_blank">klusark</a></li>
 					<li><a href="https://coderpatsy.bitbucket.io/" target="_blank">coderpatsy</a></li>
 					<li>ArcanisCz</li>
 					<li>Kida</li>
 					<li>freeroot</li>
-					<li>Ethaniel_Kavelaars</li>
-
+					<li>Ethaniel</li>
 				</ul>
 
-				Thanks a lot to 4chan/igg for being such a nice guys.
-				<br>
-				Thanks a lot to /r/kittensgame community for all the feedback and testing
-				<br>
-				tumblr icon by <a href="https://moonlight-pendent13.deviantart.com">Moonlight-pendent13</a>
-				<br>
-
-				Warmest thanks to <a href="http://www.reddit.com/user/ainil" target="_blank">ainil</a> for the long months of support and feedback.
-				<br>
-				<br>
+				Thanks a lot to 4chan/igg for being such a nice guys.<br >
+				Thanks a lot to /r/kittensgame community for all the feedback and testing.<br />
+				tumblr icon by <a href="https://moonlight-pendent13.deviantart.com">Moonlight-pendent13</a><br />
+				<br />
+				Warmest thanks to <a href="http://www.reddit.com/user/ainil" target="_blank">ainil</a> for the long months of support and feedback.<br />
+				<br />
 				And finally, my undying gratitude to Waraiko.
-				<br>
-
 			</div>
 
 
@@ -480,8 +472,9 @@
 				<select id="schemeToggle" onchange="gamePage.toggleScheme()">
 					<option value="">Classic</option>
 					<option value="dark">Inverted</option>
-					<option value="grassy">Grassy</option>
-					<option value="sleek">Sleek (By Kida)</option>
+					<option value="grassy">Grassy (by shrx)</option>
+					<option value="sleek">Sleek (by Kida)</option>
+					<option value="gold">Gold (by Volkeyrn)</option>
 				</select>
 				<br>
 				<br>
