@@ -33,6 +33,7 @@
   <link rel="stylesheet" href="res/theme_dark.css" type="text/css">
   <link rel="stylesheet" href="res/theme_grassy.css" type="text/css">
   <link rel="stylesheet" href="res/theme_sleek.css" type="text/css">
+  <link rel="stylesheet" href="res/theme_gold.css" type="text/css">
 
   <script type="text/javascript">
 
