@@ -3,6 +3,7 @@ Major:
 * Allow to burn paragon without breaking Iron Will mode if insane Space Oddity has already been achieved
 * Improve kittens' save compression
 * Make Hydroponics increase kittens capacity of Terraforming Stations
+* New theme: Gold, by Volkeyrn
 
 Minor:
 * Add confirmation pop-up for present box unwrapping
